// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox snapshots > matches snapshot: Checked 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <span
      aria-checked="true"
      aria-labelledby="terms-checked-label"
      class="peer flex size-4 shrink-0 items-center justify-center rounded-sm border border-input shadow-sm outline-none transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[checked]:border-primary data-[checked]:bg-primary data-[checked]:text-primary-foreground"
      data-checked=""
      id="base-ui-_r_3_"
      role="checkbox"
      tabindex="0"
    >
      <span
        class="flex items-center justify-center text-current"
        data-checked=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check size-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
      </span>
    </span>
    <input
      aria-hidden="true"
      checked=""
      id="terms-checked"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
      type="checkbox"
    />
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="terms-checked"
      id="terms-checked-label"
    >
      Accept terms and conditions
    </label>
  </div>
</div>
`;

exports[`Checkbox snapshots > matches snapshot: Default 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <span
      aria-checked="false"
      aria-labelledby="terms-label"
      class="peer flex size-4 shrink-0 items-center justify-center rounded-sm border border-input shadow-sm outline-none transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[checked]:border-primary data-[checked]:bg-primary data-[checked]:text-primary-foreground"
      data-unchecked=""
      id="base-ui-_r_0_"
      role="checkbox"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      id="terms"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
      type="checkbox"
    />
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="terms"
      id="terms-label"
    >
      Accept terms and conditions
    </label>
  </div>
</div>
`;

exports[`Checkbox snapshots > matches snapshot: Disabled 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <span
      aria-checked="false"
      aria-disabled="true"
      aria-labelledby="terms-disabled-label"
      class="peer flex size-4 shrink-0 items-center justify-center rounded-sm border border-input shadow-sm outline-none transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[checked]:border-primary data-[checked]:bg-primary data-[checked]:text-primary-foreground"
      data-disabled=""
      data-unchecked=""
      id="base-ui-_r_6_"
      role="checkbox"
      tabindex="-1"
    />
    <input
      aria-hidden="true"
      disabled=""
      id="terms-disabled"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
      type="checkbox"
    />
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="terms-disabled"
      id="terms-disabled-label"
    >
      Accept terms and conditions
    </label>
  </div>
</div>
`;
